# Galperin

./: .gitignore  .project  .pydevproject
cpp_solutions/: equation.h  equation1.h  equation10.h  equation2.h  equation3.h  equation4.h  equation5.h  equation6.h  equation7.h  equation8.h  equation9.h  equationN1.h  equationR1.h  equationR2.h  equationSL.h  normal_distribution.h
cpp_solutions/curve_equation/: equation1.h  equation2.h  equation3.h  equation4.h  equation5.h  equation_circle.h  equation_round.h
cpp_solutions/grid/: draw  main.cpp
cpp_solutions/neuro/: draw  main.cpp
graphics/: correlation.py  draw_3D_map.py  draw_3d.py  draw_comparsion.py  draw_comparsion_2.py  draw_neuro_map.py  draw_section.py  e_scatter.py  neuro_dep.py
net/: Upper_relaxation.cpp
performance_test/: a.out  calc.sh  draw_hist.py  generate_statistics.py  initial.txt  main.cpp
release/src/: CMakeLists.txt  approximator.cpp  approximator.h  function.h  main.cpp  optimisation.cpp  optimisation.h  restrictions.h
release/src/MQ/: MQ_1.cpp  MQ_1.h  MQ_2.cpp  MQ_2.h
release/src/problem_types/: approximator.cpp  approximator.h  find_source.cpp  find_source.h  reverse_with_curvilinear_borders.cpp  reverse_with_curvilinear_borders.h  reverse_with_derivatives_borders.cpp  reverse_with_derivatives_borders.h  sd_approximator.cpp  sd_approximator.h
reports/: search.sh
reports/1285907560.71/: Report.txt
reports/1285907689.95/: Report.txt
reports/1285908478.3/: Report.txt
src/: __init__.py  draw_points.py  draw_residual.py  first_order_method_testing.py  main.py  main_box.py  report.py  test_box.py
(+37 files in other folders)
